#include "hft/trading_client.h"
#include <chrono>
#include <iostream>
#include <nlohmann/json.hpp>
#include <random>
#include <thread>

using json = nlohmann::json;

namespace hft {

TradingClient::TradingClient(std::shared_ptr<AuthManager> auth_manager)
    : auth_manager_(auth_manager), connected_(false),
      max_order_value_(10000.0) {}

TradingClient::~TradingClient() { disconnect(); }

bool TradingClient::connect() {
  if (!auth_manager_ || !auth_manager_->validate_credentials()) {
    handle_error("Invalid or missing credentials");
    return false;
  }

  // In a real implementation, this would establish connection to Binance API
  // For now, we'll simulate a connection
  try {
    // Simulate connection delay
    std::this_thread::sleep_for(std::chrono::milliseconds(500));

    // Test credentials
    if (!auth_manager_->test_connection()) {
      handle_error("Authentication failed");
      return false;
    }

    connected_ = true;
    return true;
  } catch (const std::exception &e) {
    handle_error("Connection failed: " + std::string(e.what()));
    return false;
  }
}

void TradingClient::disconnect() {
  connected_ = false;
  active_orders_.clear();
}

bool TradingClient::is_connected() const { return connected_; }

std::future<OrderId> TradingClient::place_order(const Symbol &symbol, Side side,
                                                OrderType type, Price price,
                                                Quantity quantity,
                                                TimeInForce tif) {
  return std::async(
      std::launch::async,
      [this, symbol, side, type, price, quantity, tif]() -> OrderId {
        if (!connected_) {
          handle_error("Not connected to exchange");
          return "";
        }

        if (!validate_order(symbol, side, price, quantity)) {
          handle_error("Order validation failed");
          return "";
        }

        try {
          // Generate unique order ID
          OrderId order_id = generate_order_id();

          // Create order object
          Order order;
          order.id = order_id;
          order.symbol = symbol;
          order.side = side;
          order.type = type;
          order.price = price;
          order.quantity = quantity;
          order.time_in_force = tif;
          order.timestamp =
              std::chrono::duration_cast<std::chrono::milliseconds>(
                  std::chrono::system_clock::now().time_since_epoch())
                  .count();

          // In real implementation, this would send HTTP request to Binance
          // For now, simulate API call delay
          std::this_thread::sleep_for(std::chrono::milliseconds(100));

          // Store order in active orders
          active_orders_[order_id] = order;

          // Notify callback if set
          if (order_callback_) {
            order_callback_(order);
          }

          return order_id;
        } catch (const std::exception &e) {
          handle_error("Failed to place order: " + std::string(e.what()));
          return "";
        }
      });
}

std::future<bool> TradingClient::cancel_order(const OrderId &order_id) {
  return std::async(std::launch::async, [this, order_id]() -> bool {
    if (!connected_) {
      handle_error("Not connected to exchange");
      return false;
    }

    auto it = active_orders_.find(order_id);
    if (it == active_orders_.end()) {
      handle_error("Order not found: " + order_id);
      return false;
    }

    try {
      // Simulate API call delay
      std::this_thread::sleep_for(std::chrono::milliseconds(50));

      // Update order status
      it->second.status = OrderStatus::CANCELED;

      // Notify callback
      if (order_callback_) {
        order_callback_(it->second);
      }

      // Remove from active orders
      active_orders_.erase(it);

      return true;
    } catch (const std::exception &e) {
      handle_error("Failed to cancel order: " + std::string(e.what()));
      return false;
    }
  });
}

std::future<bool> TradingClient::cancel_all_orders(const Symbol &symbol) {
  return std::async(std::launch::async, [this, symbol]() -> bool {
    if (!connected_) {
      handle_error("Not connected to exchange");
      return false;
    }

    try {
      std::vector<OrderId> orders_to_cancel;

      for (const auto &[order_id, order] : active_orders_) {
        if (symbol.empty() || order.symbol == symbol) {
          orders_to_cancel.push_back(order_id);
        }
      }

      // Cancel each order
      for (const auto &order_id : orders_to_cancel) {
        auto future = cancel_order(order_id);
        future.wait(); // Wait for each cancellation
      }

      return true;
    } catch (const std::exception &e) {
      handle_error("Failed to cancel all orders: " + std::string(e.what()));
      return false;
    }
  });
}

std::future<std::vector<Order>>
TradingClient::get_open_orders(const Symbol &symbol) {
  return std::async(std::launch::async, [this, symbol]() -> std::vector<Order> {
    std::vector<Order> orders;

    for (const auto &[order_id, order] : active_orders_) {
      if (symbol.empty() || order.symbol == symbol) {
        orders.push_back(order);
      }
    }

    return orders;
  });
}

std::future<std::vector<Trade>>
TradingClient::get_trade_history(const Symbol &symbol, int limit) {
  return std::async(std::launch::async,
                    [this, symbol, limit]() -> std::vector<Trade> {
                      // Mock trade history
                      std::vector<Trade> trades;

                      // In real implementation, this would fetch from API
                      // For now, return empty vector
                      return trades;
                    });
}

std::future<double>
TradingClient::get_account_balance(const std::string &asset) {
  return std::async(std::launch::async, [this, asset]() -> double {
    // Mock balance
    if (asset == "USDT") {
      return 10000.0; // Mock USDT balance
    } else if (asset == "BTC") {
      return 0.5; // Mock BTC balance
    }
    return 0.0;
  });
}

std::future<Order> TradingClient::get_order_status(const OrderId &order_id) {
  return std::async(std::launch::async, [this, order_id]() -> Order {
    auto it = active_orders_.find(order_id);
    if (it != active_orders_.end()) {
      return it->second;
    }

    // Return empty order if not found
    Order empty_order;
    empty_order.status = OrderStatus::REJECTED;
    return empty_order;
  });
}

std::future<double> TradingClient::get_current_price(const Symbol &symbol) {
  return std::async(std::launch::async, [this, symbol]() -> double {
    // Mock current price - in real implementation, fetch from API
    if (symbol == "BTCUSDT" || symbol == "btcusdt") {
      return 45000.0 + (rand() % 1000 - 500); // Random price around 45000
    }
    return 0.0;
  });
}

std::future<std::pair<Price, Price>>
TradingClient::get_bid_ask_spread(const Symbol &symbol) {
  return std::async(std::launch::async,
                    [this, symbol]() -> std::pair<Price, Price> {
                      // Mock bid/ask spread
                      double mid_price = 45000.0;
                      double spread = 0.5;
                      return {mid_price - spread, mid_price + spread};
                    });
}

void TradingClient::set_order_callback(OrderCallback callback) {
  order_callback_ = callback;
}

void TradingClient::set_trade_callback(TradeCallback callback) {
  trade_callback_ = callback;
}

void TradingClient::set_error_callback(ErrorCallback callback) {
  error_callback_ = callback;
}

void TradingClient::set_max_position_size(const Symbol &symbol,
                                          Quantity max_size) {
  max_position_sizes_[symbol] = max_size;
}

void TradingClient::set_max_order_value(double max_value) {
  max_order_value_ = max_value;
}

bool TradingClient::validate_order(const Symbol &symbol, Side side, Price price,
                                   Quantity quantity) const {
  if (!validate_price(price) || !validate_quantity(quantity)) {
    return false;
  }

  return check_risk_limits(symbol, side, price, quantity);
}

OrderId TradingClient::generate_order_id() {
  static std::random_device rd;
  static std::mt19937 gen(rd());
  static std::uniform_int_distribution<> dis(100000, 999999);

  return "ORDER_" + std::to_string(dis(gen));
}

std::string TradingClient::get_current_timestamp() {
  auto now = std::chrono::system_clock::now();
  auto timestamp = std::chrono::duration_cast<std::chrono::milliseconds>(
                       now.time_since_epoch())
                       .count();
  return std::to_string(timestamp);
}

bool TradingClient::check_connection() { return connected_; }

void TradingClient::handle_error(const std::string &error_message) {
  std::cerr << "TradingClient Error: " << error_message << std::endl;

  if (error_callback_) {
    error_callback_(error_message);
  }
}

bool TradingClient::validate_price(Price price) const {
  return price > 0.0 && price < 1000000.0; // Reasonable price bounds
}

bool TradingClient::validate_quantity(Quantity quantity) const {
  return quantity > 0.0 && quantity < 1000.0; // Reasonable quantity bounds
}

bool TradingClient::check_risk_limits(const Symbol &symbol, Side side,
                                      Price price, Quantity quantity) const {
  double order_value = price * quantity;

  // Check max order value
  if (order_value > max_order_value_) {
    return false;
  }

  // Check position size limits
  auto it = max_position_sizes_.find(symbol);
  if (it != max_position_sizes_.end() && quantity > it->second) {
    return false;
  }

  return true;
}

std::string
TradingClient::make_authenticated_request(const std::string &endpoint,
                                          const std::string &method,
                                          const std::string &params) {
  // In real implementation, this would make HTTP requests to Binance API
  // For now, return mock response
  return "{\"status\":\"success\"}";
}

} // namespace hft
