classDiagram
    class WebSocketClient {
        -string url
        -bool connected
        -boost::lockfree::queue messageQueue
        +connect()
        +disconnect()
        +onMessage(string data)
        +sendMessage(string message)
        +isConnected() bool
    }
    
    class MatchingEngine {
        -OrderBook* orderBook
        -TradingClient* tradingClient
        -bool running
        +start()
        +stop()
        +processMessage(Message msg)
        +updateOrderBook(OrderData data)
    }
    
    class OrderBook {
        -map~double,double~ bids
        -map~double,double~ asks
        -string symbol
        -int depth
        +updateBid(double price, double quantity)
        +updateAsk(double price, double quantity)
        +getBestBid() double
        +getBestAsk() double
        +getSpread() double
        +print()
    }
    
    class TradingClient {
        -AuthManager* authManager
        -string apiKey
        -string secretKey
        -map~string,Order~ openOrders
        +placeOrder(OrderRequest order) string
        +cancelOrder(string orderId) bool
        +getOpenOrders() vector~Order~
        +getAccountBalance() Balance
        +validateOrder(OrderRequest order) bool
    }
    
    class AuthManager {
        -string apiKey
        -string secretKey
        -bool authenticated
        +setCredentials(string key, string secret)
        +generateSignature(string payload) string
        +getTimestamp() long
        +testConnection() bool
        +loadFromConfig(string filename) bool
    }
    
    class Order {
        -string id
        -string symbol
        -string side
        -string type
        -double quantity
        -double price
        -string status
        -long timestamp
        +getId() string
        +getStatus() string
        +isActive() bool
    }
    
    class UIManager {
        -MatchingEngine* engine
        -bool running
        +start()
        +stop()
        +displayMenu()
        +handleUserInput()
        +printOrderBook()
        +printStats()
    }

    WebSocketClient "1" --o "1" MatchingEngine: uses
    MatchingEngine o-- OrderBook: manages
    MatchingEngine o-- TradingClient: controls
    TradingClient o-- AuthManager: authenticates
    TradingClient "1" --* "many" Order: manages
    UIManager o-- MatchingEngine: displays

